--- a/godot/export_presets.cfg
+++ b/godot/export_presets.cfg
@@ -158,10 +158,10 @@ architectures/x86=false
 architectures/x86_64=false
 keystore/debug="../android.keystore"
 keystore/debug_user="godot"
-keystore/debug_password="godotpass"
+keystore/debug_password="secretgodotpass"
 keystore/release="../android.keystore"
 keystore/release_user="godot"
-keystore/release_password="godotpass"
+keystore/release_password="secretgodotpass"
 one_click_deploy/clear_previous_install=true
 version/code=1
 version/name="1.0"
